# Parthenon

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .gitmodules  AGENTS.md  APP-SIGNING-HOWTO.md  AZURE-SIGNING-HOWTO.md  CLAUDE.md  CONTRIBUTING.md  GPG-SIGNING-SETUP.md  Makefile  PLAN.md  README-new-services.md  README.md  ROADMAP.md  SIGNING-KEY.asc  apache2-omop.conf  broadsea-local-deployment-guide.md  broadsea-startup.sh  broadsea.service  clickme.py  create-databases.sql  create-db-helper.sh  deploy-ref.sh  deploy-remote.sh  deploy.sh  docker-compose.community.yml  docker-compose.yml  fix-test.patch  fixed-omop-ssl.conf  headers.txt  install.py  omop.acumenus.net.conf  package-lock.json  parthenon-data  setup-new-services.sh  survey-pro-omop-investigation.docx
.Jules/: palette.md
.claude/: CLAUDE.md
.github/: dependabot.yml
.jules/: sentinel.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
OHDSI-scraper/: CURATED_MEDICAL_TEXTBOOKS.md  README.md  WIKI_REBUILD_HANDOFF.md  backfill_metadata.py  corpus_exclusions.csv  csv-OHDSI-set.csv  csv-ohdsiomop-set.csv  csv-omop-set.csv  download_validated_papers.py  (+11 more)
installer/rust-gui/: Cargo.toml  README.md  tauri.conf.json
installer/rust-gui/capabilities/: default.json
installer/rust-gui/helper/: parthenon-installer-helper
installer/rust-gui/icons/: icon.icns
installer/rust-gui/polkit/: io.acumenus.parthenon.installer.policy
installer/rust-gui/src/: elevation.rs  installer_state.rs  main.rs  remediation.rs
installer/rust-gui/ui/: app.js  index.html  styles.css
poseidon/: Makefile  README.md  __init__.py  pyproject.toml
poseidon/dagster/: __init__.py  definitions.py
poseidon/dagster/assets/: __init__.py  dbt_assets.py
poseidon/dagster/io_managers/: __init__.py
poseidon/dagster/jobs/: __init__.py
poseidon/dagster/partitions/: __init__.py
poseidon/dagster/resources/: __init__.py
poseidon/dagster/schedules/: __init__.py
poseidon/dagster/sensors/: __init__.py
poseidon/dbt/: dbt_project.yml  profiles.yml
poseidon/dbt/macros/: concept_lookup.sql  generate_schema_name.sql  standard_concept.sql
poseidon/dbt/models/cdm/: _cdm__schema.yml  person.sql
poseidon/docker/poseidon/: Dockerfile  entrypoint.sh
(+11446 files in other folders)
