[project]
name = "poseidon"
version = "0.1.0"
description = "dbt + Dagster orchestration for OMOP CDM maintenance"
requires-python = ">=3.12"

dependencies = [
    "dagster>=1.9,<2.0",
    "dagster-webserver>=1.9,<2.0",
    "dagster-dbt>=0.25,<1.0",
    "dagster-postgres>=0.25,<1.0",
    "dbt-postgres>=1.9,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "dagster-dev",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster*"]
