[package]
name = "parthenon-installer-gui"
version = "0.1.0"
description = "Rust desktop shell for the Parthenon Community installer"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
