[package]
name = "parthenon-installer-gui"
version = "0.1.0"
description = "Rust desktop shell for the Parthenon Community installer"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
ureq = "2"
